--- a/Group Project/pages/About-Us.html
+++ b/Group Project/pages/About-Us.html
@@ -1,2 +1,27 @@
 <h1> Start Here</h1>
-<h2> Jonathon</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+
+</head>
+<h1>About Us</h1>
+
+<body>
+    At Vision Vogue, we believe that eyewear is not just about vision — it's about style, comfort and enhancing the way you see the world. Founded in 2025, we set out on a mission to provide high-quality eyeglasses that combine fashion-forward designs with premium materials and cutting-edge technology.
+
+We understand that everyone’s vision is unique, which is why we offer a wide range of frames, lenses and customization options. Whether you're looking for prescription glasses, reading glasses, or sunglasses, we have something to suit every lifestyle and personal style.
+
+Our commitment to quality is evident in every pair of glasses we sell. We work with trusted manufacturers and use only the finest lenses and durable frames to ensure that your eyewear lasts. With a focus on sustainability, we also offer eco-friendly options for those looking to make a positive impact on the planet.
+
+At Vision Vogue, customer satisfaction is our top priority. From our easy-to-use website to our fast and reliable shipping, we aim to provide a seamless shopping experience. Our dedicated customer support team is always ready to assist you with any questions or concerns.
+
+Thank you for choosing Vision Vogue. We're excited to be a part of your vision journey.
+
+    
+</body>
+</html>
+
+<h2> Jonathan</h2>
