--- a/Group Project/Index.html
+++ b/Group Project/Index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <!-- This is to automatically adjust screen sizes on different devices  -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Vision Vogue</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -42,18 +42,27 @@
     </div>
   </nav>
 
-<h1> Start Here</h1>
+<div class="container">
+      <h1> Welcome to Vision Vogue</h1>
+      <h2>Find your Perfect Pair of Glasses Here</h2>
+      <p>Fashionable,Sophisticated and Durable</p>
+      <a href="pages/Products.html" class="cta-button">Shop Now</a>
+    
+</div>
+
+<div>
+      <h2>Vision Vogue Collection</h2>
+      <p>Explore our exclusive collection crafted for style and comfort.</p>
+</div>
+
 <h2> Latoya</h2>
-
-
-
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
+<footer>
+  <footer class="text-center py-4">
+  <p>&copy; <span id="year"></span> Vision Vogue. All rights reserved.</p>
+</footer>
 </body>
 </html>
