--- a/Group Project/Index.html
+++ b/Group Project/Index.html
@@ -7,6 +7,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vision Vogue</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+      :root {
+        --primary-gold: #d4af37;
+        --white: #ffffff;
+        --dark-gray: #333333;
+      }
+
+      body {
+        font-family: 'Arial', sans-serif;
+        background-color: var(--white);
+        color: var(--dark-gray);
+        margin: 0;
+        padding: 0;
+      }
+
+      .navbar {
+        background-color: var(--white);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
+      .navbar-brand {
+        font-size: 1.8rem;
+        color: var(--primary-gold);
+      }
+
+      .nav-link {
+        color: var(--primary-gold);
+        font-weight: 600;
+        margin-right: 1.5rem;
+        transition: all 0.3s ease;
+      }
+
+      .nav-link:hover {
+        color: var(--primary-gold);
+      }
+
+      .hero {
+        background: linear-gradient(to right, var(--white), var(--primary-gold));
+        color: var(--white);
+        padding: 10rem 1rem;
+        text-align: center;
+      }
+
+      .hero h1 {
+        font-size: 4rem;
+        margin-bottom: 1rem;
+        color: var(--primary-gold);
+      }
+
+      .hero h2 {
+        font-size: 2rem;
+        margin-bottom: 1.5rem;
+        font-weight: 600;
+        color: var(--white);
+      }
+
+      .cta-button {
+        background-color: var(--primary-gold);
+        color: var(--white);
+        padding: 1rem 3rem;
+        font-size: 1.2rem;
+        border-radius: 30px;
+        text-decoration: none;
+        transition: all 0.3s ease;
+      }
+
+      .cta-button:hover {
+        background-color: #f5c400;
+      }
+
+      .collection {
+        padding: 4rem 1rem;
+        text-align: center;
+        background-color: var(--primary-gold);
+        color: var(--white);
+      }
+
+      .collection h2 {
+        font-size: 3rem;
+        margin-bottom: 1.5rem;
+      }
+
+      .collection p {
+        font-size: 1.2rem;
+        font-weight: 600;
+      }
+
+      footer {
+        background-color: var(--primary-gold);
+        color: var(--white);
+        padding: 2rem 1rem;
+        text-align: center;
+      }
+
+      footer p {
+        margin: 0;
+        font-weight: 600;
+      }
+
+      @media (max-width: 768px) {
+        .hero h1 {
+          font-size: 3rem;
+        }
+
+        .hero h2 {
+          font-size: 1.5rem;
+        }
+      }
+    </style>
   </head>
   <body>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -14,7 +123,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Vision Vogue</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,7 +151,7 @@
     </div>
   </nav>
 
-<div class="container">
+<div class="hero">
       <h1> Welcome to Vision Vogue</h1>
       <h2>Find your Perfect Pair of Glasses Here</h2>
       <p>Fashionable,Sophisticated and Durable</p>
@@ -50,13 +159,14 @@
     
 </div>
 
-<div>
+<div class="collection">
       <h2>Vision Vogue Collection</h2>
       <p>Explore our exclusive collection crafted for style and comfort.</p>
 </div>
 
+<div class="container mt-5"
 <h2> Latoya</h2>
-
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
