--- a/Group Project/pages/faq.html
+++ b/Group Project/pages/faq.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <!-- This is to automatically adjust screen sizes on different devices  -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>FAQs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -19,12 +19,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="faq.html">FAQs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="pages/Products.html">Products</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="Prescriptions_and_checkouts.html">Home</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="pages/contact-us.html">Contact Us</a>
           </li>
