--- a/Group Project/pages/About-Us.html
+++ b/Group Project/pages/About-Us.html
@@ -29,7 +29,12 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="Prescriptions_and_checkouts.html">Home</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="pages/faq.html">FAQs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="pages/faq.html">FAQs/a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="pages/contact-us.html">Contact Us</a>
           </li>
