--- a/Group Project/pages/Prescriptions_and_checkouts.html
+++ b/Group Project/pages/Prescriptions_and_checkouts.html
@@ -27,7 +27,9 @@
           <li class="nav-item">
             <a class="nav-link" href="pages/Prescriptions_and_checkouts">Products</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="pages/faq.html">FAQs</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="pages/contact-us.html">Contact Us</a>
           </li>
