--- a/Group Project/pages/contact-us.html
+++ b/Group Project/pages/contact-us.html
@@ -60,6 +60,9 @@
             <a class="nav-link active" aria-current="page" href="Prescriptions_and_checkouts.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="pages/faq.html">FAQs</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="contact-us.html">Contact Us</a>
           </li>
           <li class="nav-item">
