--- a/Group Project/pages/faq.html
+++ b/Group Project/pages/faq.html
@@ -28,6 +28,9 @@
             <a class="nav-link active" aria-current="page" href="Prescriptions_and_checkouts.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="pages/faq.html">FAQs</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="pages/contact-us.html">Contact Us</a>
           </li>
           <li class="nav-item">
