--- a/Group Project/pages/About-Us.html
+++ b/Group Project/pages/About-Us.html
@@ -4,10 +4,14 @@
     <meta charset="utf-8">
     <!-- This is to automatically adjust screen sizes on different devices  -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Us</title>
+    <title>Products</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-</head>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Vision Vogue</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,12 +20,17 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="Products.html">Products</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="pages/Products.html">Products</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="Prescriptions_and_checkouts.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="pages/faq.html">FAQs</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="pages/contact-us.html">Contact Us</a>
           </li>
@@ -35,6 +44,11 @@
         </form>
       </div>
     </div>
+  </nav>
+
+  <section class="container mx-auto px-6 py-10">
+    <h2 class="text-3xl font-semibold mb-6">About Us</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
 <h1>About Us</h1>
 <br>
 <body>
@@ -48,6 +62,10 @@ At Vision Vogue, customer satisfaction is our top priority. From our easy-to-use
 
 Thank you for choosing Vision Vogue. We're excited to be a part of your vision journey.
 
-    
+<footer class="bg-white mt-12 py-6 shadow-inner">
+    <div class="container mx-auto px-6 text-center text-gray-500">
+      &copy; 2025 Vision Vogue. All rights reserved.
+    </div>
+  </footer>
 </body>
 </html>
