--- a/Group Project/pages/contact-us.html
+++ b/Group Project/pages/contact-us.html
@@ -163,6 +163,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
+<footer class="bg-white mt-12 py-6 shadow-inner">
+  <div class="container mx-auto px-6 text-center text-gray-500">
+    &copy; 2025 Vision Vogue. All rights reserved.
+  </div>
+</footer>
 </body>
 </html>
