--- a/Group Project/pages/faq.html
+++ b/Group Project/pages/faq.html
@@ -173,3 +173,9 @@
     If you're shopping online, we offer a virtual try-on tool for many of our frames. 
     If you're visiting in person, you're welcome to try on frames in-store.
 </p>
+
+<footer class="bg-white mt-12 py-6 shadow-inner">
+  <div class="container mx-auto px-6 text-center text-gray-500">
+    &copy; 2025 Vision Vogue. All rights reserved.
+  </div>
+</footer>
